Added Open Sans font

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 <option value="Menlo-Italic.svg">Menlo italic</option>
                 <option value="Menlo-BoldItalic.svg">Menlo bold+italic</option>
                 <option value="GothamPro.svg">Gotham Pro</option>
+                <option value="OpenSans-Bold.svg">Open Sans bold</option>
             </select>
         </p>
 
